--- a/calendar/style.css
+++ b/calendar/style.css
@@ -17,12 +17,12 @@ aside {
 }
 
 .aside__header {
-    background-image: url(img/BG.jpg);
+    background-image: url(https://placepic.ru/wp-content/uploads/2019/07/ushanov-15.jpg);
     background-size: cover;
 }
 
 main {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(249, 157, 157);
     flex-basis: 80%;
     height: 1000px;
     flex-grow: 1;
@@ -37,7 +37,7 @@ main {
 }
 
 .aside__header {
-    padding-top: 20px;
+    padding-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
