--- a/picture/style.css
+++ b/picture/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #ffffe5;
-    padding: 10px;
+    padding: 14px;
     padding-left: 450px;
     padding-top: 40px;
 }
@@ -9,9 +9,9 @@ body {
     border-bottom: solid 5px #FF9AA2;
     border-left: solid 5px #FF9AA2;
     background-color: #FFB7B2;
-    color: #f8818a;
-    width: 45%;
-    padding: 10px;
+    color: #b981f8;
+    width: 50%;
+    padding: 12px;
 }
 
 .img {
